# SimpleLang-Compiler

./: .gitignore  CMakeLists.txt  README.md
docs/: compiler_design.md
examples/: conditions.sl  hello.sl  loops.sl  variables.sl
include/compiler/: Bytecode.h  CodeGenerator.h
include/core/: Config.h  Error.h  Utils.h
include/interpreter/: Environment.h  Interpreter.h
include/lexer/: Keywords.h  Lexer.h  Token.h
include/parser/: AST.h  Grammar.h  Parser.h
include/runtime/: StandardLibrary.h
include/semantic/: SemanticAnalyzer.h  SymbolTable.h  TypeChecker.h
src/: main.cpp
src/compiler/: Bytecode.cpp  CodeGenerator.cpp
src/core/: Config.cpp  Error.cpp  Utils.cpp
src/interpreter/: Environment.cpp  Interpreter.cpp
src/lexer/: Keywords.cpp  Lexer.cpp  Token.cpp
src/parser/: AST.cpp  Grammar.cpp  Parser.cpp
src/runtime/: StandardLibrary.cpp
src/semantic/: SemanticAnalyzer.cpp  SymbolTable.cpp  TypeChecker.cpp
tests/: interpreter_tests.cpp  lexer_tests.cpp  parser_tests.cpp
